Finish authentication and viewer,self authorization
